tests/ui/cast/ptr-to-trait-obj-wrap-add-auto.stderr
error: adding an auto trait `Send` to a trait object in a pointer cast may cause UB later on
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:14:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #127323 <https://github.com/rust-lang/rust/issues/127323>
note: the lint level is defined here
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:6:9
   |
LL | #![deny(ptr_cast_add_auto_to_object)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: adding an auto trait `Send` to a trait object in a pointer cast may cause UB later on
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:20:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #127323 <https://github.com/rust-lang/rust/issues/127323>

error: adding an auto trait `Send` to a trait object in a pointer cast may cause UB later on
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:26:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #127323 <https://github.com/rust-lang/rust/issues/127323>

error: adding an auto trait `Send` to a trait object in a pointer cast may cause UB later on
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:32:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #127323 <https://github.com/rust-lang/rust/issues/127323>

error: adding an auto trait `Send` to a trait object in a pointer cast may cause UB later on
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:38:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #127323 <https://github.com/rust-lang/rust/issues/127323>

error: aborting due to 5 previous errors

Future incompatibility report: Future breakage diagnostic:
error: adding an auto trait `Send` to a trait object in a pointer cast may cause UB later on
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:14:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #127323 <https://github.com/rust-lang/rust/issues/127323>
note: the lint level is defined here
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:6:9
   |
LL | #![deny(ptr_cast_add_auto_to_object)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: adding an auto trait `Send` to a trait object in a pointer cast may cause UB later on
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:20:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #127323 <https://github.com/rust-lang/rust/issues/127323>
note: the lint level is defined here
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:6:9
   |
LL | #![deny(ptr_cast_add_auto_to_object)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: adding an auto trait `Send` to a trait object in a pointer cast may cause UB later on
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:26:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #127323 <https://github.com/rust-lang/rust/issues/127323>
note: the lint level is defined here
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:6:9
   |
LL | #![deny(ptr_cast_add_auto_to_object)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: adding an auto trait `Send` to a trait object in a pointer cast may cause UB later on
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:32:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #127323 <https://github.com/rust-lang/rust/issues/127323>
note: the lint level is defined here
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:6:9
   |
LL | #![deny(ptr_cast_add_auto_to_object)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: adding an auto trait `Send` to a trait object in a pointer cast may cause UB later on
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:38:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #127323 <https://github.com/rust-lang/rust/issues/127323>
note: the lint level is defined here
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:6:9
   |
LL | #![deny(ptr_cast_add_auto_to_object)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

